# build-an-app-with-webgpu

./: CMakeLists.txt  CMakePresets.json  main.cpp
